<resources>
    <string name="app_name">MRoutines</string>
    <string name="navigation_drawer_open">Abrir navigation drawer</string>
    <string name="navigation_drawer_close">Cerrar navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="correo">f.manu_97@hotmail.com</string>
    <string name="nivel">Nivel:</string>
    <string name="tipo">Tipo:</string>
    <string name="rutina">Rutina</string>
    <string name="nombre">Nombre:</string>
    <string name="series">Series:</string>
    <string name="repeticiones">Repeticiones:</string>
    <string name="tiempo">Tiempo:</string>
    <string name="actualizar_rutina">Actualizar Rutina</string>
    <string name="intr_nombre">Introduzca el nombre</string>
    <string name="intr_tipo">Introduzca el tipo de rutina</string>
    <string name="intr_nivel">Introduzca el nivel de la rutina</string>
    <string name="cancelar">Cancelar</string>
    <string name="crear_rutina">Crear Rutina</string>
    <string name="num_rutinas">Rutinas en lista:</string>
    <string name="nuevo_ejercicio">Añadir ejercicio</string>
    <string name="num_ejercicios">Ejercicios en lista:</string>
    <string name="intr_series">Introduzca el numero de series</string>
    <string name="intr_repes">Introduzca el numero de repeticiones</string>
    <string name="intr_tiempo">Introduzca la duración del ejercicio</string>
    <string name="intr_gMuscular">Introduzca el grupo muscular principal</string>
    <string name="crear_ejercicio">Crear ejercicio</string>
    <string name="musculación">Musculación</string>
    <string name="cardio">Cardiovascular</string>
    <string name="otro">Otro</string>
    <string name="edicion_rutina">Editar Rutina</string>
    <string name="borrar_rutina">Borrar Rutina</string>
    <string name="borrar_ejercicio">Borrar Ejercicio</string>
    <string name="edit_ejercicio">Editar Ejercicio</string>
    <string name="editar_ejercicio">Editar Ejercicio</string>
    <string name="actualizar_ejercicio">Actualizar ejercicio</string>
    <string name="instituto">www.iesvirgendelcarmen.com</string>
    <string name="descripcion">Esta es una Aplicación nativa para Android
        que nos permite gestionar nuestras rutinas deportivas,con una interfaz intuitiba
        y facil de usar.
       </string>
    <string name="funcionamiento_MRoutines">El funcionamiento de MRoutines está
        basado en el uso de un servicio REST contra una base de datos Mongo.

        Su codigo está basado en el uso de los patrones MVP y Repositorio.</string>
    <string name="descripcionT">- Descripción:</string>
    <string name="funcionamiento">- ¿Como se ha hecho MRoutines?</string>
    <string name="manualT">- ¿Como funciona la aplicación?</string>
    <string name="manual">
         - Al iniciar la aplicación se nos muestra el listado con nuestras rutinas,
          para añadir nuevas rutinas solo tenemos que pulsar sobre el icono con el simbolo
          de "+" que hay situado abajo a la derecha.\n\n

        - Para editar o borrar una rutina debemos de mantener pulsada nuestra rutina, lo cuál nos abrira el
          menu de edición y borrado..\n\n

        - Si queremos ver los ejercicios de nuestra rutina solo tenemos que pulsar sobre esta
          y nos llevará a la pantalla para ver nuestros ejercicios..\n\n

        - Para modificar, borrar o añadir ejercicios el mecanismo es el mismo que con la rutinas..\n\n

        - Para ver el detalle de nuestro ejercicio solo tenemos que pulsar sobre este.\n

    </string>
    <string name="otrosDetallesT">- Otros detalles.</string>
    <string name="otrosDetalles">\n
        *Autor: Fermach\n
        *Versión: 1.0.\n
        *Correo: f.manu_97@hotmail.com\n

    </string>


</resources>
