<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    app:contentPaddingRight="80sp"
    app:contentPaddingLeft="3sp"
    android:layout_marginRight="95sp"
    android:layout_marginVertical="120sp"
    android:layout_marginLeft="95sp"
    android:layout_gravity="center_vertical|center_horizontal"
    android:id="@+id/detalleEjercicio"
    android:layout_width="match_parent"
    android:backgroundTint="@color/blueSky"
    android:layout_height="match_parent"
    >

<LinearLayout
 android:layout_width="match_parent"
 android:orientation="vertical"
 android:layout_height="wrap_content">

 <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
     android:layout_marginLeft="7sp"
        android:orientation="vertical"
        android:layout_height="wrap_content">

     <TextView
         android:textColor="@android:color/black"
         android:id="@+id/ejer_detalle_nombre"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10sp"
         android:layout_marginLeft="5sp"
         android:layout_weight="1"
         android:text="@string/nombre"
         android:textSize="18sp" />

     <TextView
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ejer_detalle_tipo"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="5sp"
        android:text="@string/tipo"
        android:textSize="16sp" />

  </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12sp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="4dp">


            <TextView
                android:id="@+id/ejer_detalle_tiempo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7sp"
                android:layout_marginTop="100sp"
                android:text="@string/tiempo"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/ejer_detalle_respeticiones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7sp"
                android:text="@string/repeticiones"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/ejer_detalle_series"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7sp"
                android:layout_marginBottom="20sp"
                android:text="@string/series"
                android:textSize="16sp" />


        </LinearLayout>


    </LinearLayout>
</LinearLayout>

</android.support.v7.widget.CardView>