<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_crearRutina">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/papel2"
    android:orientation="vertical"
    android:id="@+id/area_crearRutina"
    android:weightSum="1"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="478dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:text="@string/crear_rutina"
            android:textSize="20sp" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@android:color/holo_blue_light"
        />
    <LinearLayout
        android:layout_marginTop="5sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterMaxLength="30"
            android:textColorHint="@android:color/black"
            app:counterEnabled="true"
            app:errorEnabled="true"
            android:layout_marginLeft="13sp"
            android:layout_marginRight="17sp"
            android:layout_weight="9.38">
            <EditText
                android:id="@+id/editText_nombreRutina"
                android:textColorHint="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/intr_nombre"
                android:inputType="text"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/intr_tipo"
            android:layout_marginLeft="17sp"
            android:textSize="15sp"
            android:layout_marginTop="10sp"
            />
        <Spinner
            android:id="@+id/spinner_tipoRutina"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="11sp"
            android:layout_marginLeft="17sp"
            android:layout_marginRight="17dp"
            android:textSize="20sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intr_nivel"
            android:layout_marginLeft="17sp"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:layout_marginTop="10sp"
            />
        <Spinner
            android:id="@+id/spinner_nivelRutina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="11sp"
            android:layout_marginLeft="17sp"
            android:layout_marginRight="17dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="200sp"
        >

        <Button
            android:id="@+id/btn_cancelar_formRutina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="10sp"
            android:text="@string/cancelar" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crear_rutina"
            android:layout_weight="1"
            android:elevation="10sp"
            android:id="@+id/btn_crear_formRutina"/>


    </LinearLayout>

</LinearLayout>
</ScrollView>